chore: hero contents formatting logic + fixed overflow on mobile

--- a/custom-styles/style.scss
+++ b/custom-styles/style.scss
@@ -1,14 +1,9 @@
 html {
   font-family: "Inter", sans-serif;
+  scroll-behavior: smooth;
 }
 
-.header {
-  // border: 2px solid blue;
-  display: flex;
-  align-items: center;
-  // padding-top: 9rem;
-  padding-bottom: 3rem;
-
+  .header {
   &-nav {
     ul > li {
       position: relative;
@@ -56,7 +51,21 @@ html {
 }
 
 .hero {
-  height: 100%;
+  position: relative;
+
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: #101323;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+    // border: 1px solid yellow;
+  }
+  // height: 100%;
   // border: 3px solid green;
   // min-height: 100vh;
   // margin-top: 5rem;
